--- a/src/dbtvault-dev/secrethub.env
+++ b/src/dbtvault-dev/secrethub.env
@@ -7,6 +7,6 @@ SNOWFLAKE_DB_SCHEMA= {{ Datavault/dbtvault-db-creds/snowflake/dev/schema }}
 SNOWFLAKE_DB_ROLE= {{ Datavault/dbtvault-db-creds/snowflake/dev/role }}
 
 
-GCP_PROJECT_ID= ''
-GCP_DATASET= ''
-GCP_KEYFILE_PATH= ''
+GCP_PROJECT_ID= {{ balmasi/dbtvault/bq/project_id }}
+GCP_DATASET= {{ balmasi/dbtvault/bq/dataset }}
+GCP_KEYFILE_PATH= {{ balmasi/dbtvault/bq/keyfile_path }}
