--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@ test_project/dbtvault_test/models/schema_test.yml
 secrethub/secrethub_dev.env
 
 
+
+# Default .gitignore content added by dbt Cloud# you shouldn't commit these into source control
+# these are the default directory names, adjust/add to fit your needs
+target/
+dbt_packages/
+logs/
+# end dbt Cloud content
